# Market_Analysis_Backend

./: .gitignore  ARCHITECTURE.md  CLEANUP_BASELINE.md  probe_examples.txt  probe_out.txt  probe_out_b.txt  pyproject.toml
.github/: copilot-instructions.md
BenTrade/: pdf_diag_output.txt
BenTrade/backend/: .gitignore  README.md  _polygon_raw_results.json  _yahoo_results.json  launcher.py  requirements.txt  start_backend.ps1  start_backend.sh
BenTrade/frontend/: README.md  index.html
backend/: README.md  agent.py  dashboard.html  main.py  quant_analysis.py  requirements.txt  utils.py
docs/: APP_CONTEXT.md  backend_perf_report.md  cleanup_keep_delete_review.md  cleanup_usage_graph.md  foundational_rework.txt  pipeline_response.json
docs/_archive/: backend_refactor_plan.md  frontend_refactor_plan.md  legacy_access_inventory.md
docs/architecture/: bentrade_decision_system_current_state.md  overview.md
docs/audit/: audit_1a_tradier_ingestion.md  audit_1b_fred_ingestion.md  audit_1c_proxy_inventory.md  audit_1d_market_context_freshness.md  audit_1e_engine_input_assembly.md  audit_1f_scanner_data_deps.md  audit_2a_pillar_scoring.md  audit_2b_composite_aggregation.md  audit_2c_score_calibration.md  audit_4a_regime_prompt.md  (+28 more)
scripts/: check_encoding.py  check_utf8.ps1  dump_all_mi_prompts.py  dump_ce_result.py  probe_flows_phase1.py  probe_flows_phase1_b.py  proof_decision_response_contract.py  rebuild-launcher.cmd  rebuild-launcher.ps1  sample_mi_prompts.json  sample_mi_prompts.txt  test_pdf_render.py  test_premarket_api.py  test_yahoo_direct.py  test_yfinance.py
(+761 files in other folders)
